# eo-ws-bridge

./: LICENSE.txt  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
