[package]
name = "eo-ws-bridge"
version = "1.0.0"
description = "WebSocket bridge for Endless Online"
authors = ["Richard Leek <richard@richardleek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eo_ws_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eolib = "2.1.1"
futures-util = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
